--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,40 +1,40 @@
-<mat-toolbar color="accent">
+<mat-toolbar color="accent" class="custom-toolbar">
   <button mat-icon-button class="mobile-menu-button" (click)="toggleSidenav()">
     <mat-icon>menu</mat-icon>
   </button>
 
   <a routerLink="/home">
-    <span class="logo">MOOVART</span>
+    <span class="logo">LOGO</span>
   </a>
   <span class="spacer"></span>
 
   @if(isLoggedIn){
-    <button mat-button  routerLink="/new-event">New Event</button>
+    <button mat-button class="custom-button" routerLink="/new-event">New Event</button>
   }
-  <button mat-button routerLink="/artists">Artists</button>
-  <button mat-button routerLink="/locals">Locals</button>
-  <button mat-button routerLink="/events">Events</button>
+  <button mat-button class="custom-button" routerLink="/artists">Artists</button>
+  <button mat-button class="custom-button" routerLink="/locals">Locals</button>
+  <button mat-button class="custom-button" routerLink="/events">Events</button>
   @if(!isLoggedIn){
-    <button mat-button  routerLink="/login">Log in</button>
+    <button mat-button class="custom-button" routerLink="/login">Log in</button>
   }
   @if(!isLoggedIn){
-    <button mat-button  routerLink="/register">Register</button>
+    <button mat-button class="custom-button" routerLink="/register">Register</button>
   }
   @if(isLoggedIn){
-  <button mat-icon-button [matMenuTriggerFor]="menu">
-    <mat-icon>account_circle</mat-icon>
-  </button>
+    <button mat-icon-button class="custom-icon-button" [matMenuTriggerFor]="menu">
+      <mat-icon>account_circle</mat-icon>
+    </button>
 
-  <mat-menu #menu="matMenu">
-    <button mat-menu-item routerLink="/profile">Profile</button>
-
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item (click)="navigateToProfile()">Profile</button>
       <button mat-menu-item (click)="logout()">Log out</button>
-  </mat-menu>
-  <button mat-icon-button>
-    <mat-icon>notifications</mat-icon>
-  </button>
-}
+    </mat-menu>
+    <button mat-icon-button class="custom-icon-button">
+      <mat-icon>notifications</mat-icon>
+    </button>
+  }
 </mat-toolbar>
+
 
 <!--la sidebar no va-->
 <mat-sidenav-container class="sidenav-container">
