--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -46,7 +46,7 @@
             <span class="ms-2">{{ userName }}</span>
           </a>
           <div class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenu">
-            <a class="dropdown-item" (click)="navigateToProfile()">Profile</a>
+            <a class="dropdown-item" (click)="goToProfile()">Ver Perfil</a>
             <a class="dropdown-item" (click)="logout()">Log out</a>
           </div>
         </li>
