--- a/src/app/components/profile/profile-edit/profile-edit.component.html
+++ b/src/app/components/profile/profile-edit/profile-edit.component.html
@@ -12,22 +12,20 @@
       <div class="form-group mb-3">
         <label for="name" class="form-label">Name</label>
         <input id="name" formControlName="name" class="form-control" />
-        @if (name?.touched && name?.invalid && name?.hasError('required')) {
-          <div class="text-danger">Name is required</div>
-        }
+        <div *ngIf="name?.touched && name?.invalid && name?.hasError('required')" class="text-danger">
+          Name is required
+        </div>
       </div>
 
       <div class="form-group mb-3">
         <label for="city" class="form-label">City</label>
         <select id="city" formControlName="city" class="form-control">
           <option value="">Select City</option>
-          @for (city of cities; track city) {
-            <option [value]="city">{{ city }}</option>
-          }
+          <option *ngFor="let city of cities" [value]="city">{{ city }}</option>
         </select>
-        @if (city?.touched && city?.invalid && city?.hasError('required')) {
-          <div class="text-danger">City is required</div>
-        }
+        <div *ngIf="city?.touched && city?.invalid && city?.hasError('required')" class="text-danger">
+          City is required
+        </div>
       </div>
 
       <div class="form-group mb-3">
@@ -37,9 +35,9 @@
           <option value="artist">Artist</option>
           <option value="local">Local</option>
         </select>
-        @if (user_type?.touched && user_type?.invalid && user_type?.hasError('required')) {
-          <div class="text-danger">User type is required</div>
-        }
+        <div *ngIf="user_type?.touched && user_type?.invalid && user_type?.hasError('required')" class="text-danger">
+          User type is required
+        </div>
       </div>
 
       <div class="form-group mb-3">
@@ -56,4 +54,3 @@
     </form>
   </div>
 </div>
-
