--- a/src/app/components/profile/profile-photo-upload/profile-photo-upload.component.scss
+++ b/src/app/components/profile/profile-photo-upload/profile-photo-upload.component.scss
@@ -1,15 +1,12 @@
-.profile-photo-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 150px;
-  height: 150px;
-  margin: auto;
+/* profile.component.css */
+.profile {
+  text-align: center;
 }
 
-.profile-photo-preview {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.profile-picture {
+  width: 150px;
+  height: 150px;
   border-radius: 50%;
+  object-fit: cover;
+  margin-bottom: 10px;
 }
