--- a/src/app/components/profile/profile-photo-upload/profile-photo-upload.component.scss
+++ b/src/app/components/profile/profile-photo-upload/profile-photo-upload.component.scss
@@ -1,13 +1,19 @@
-.profile-photo-preview {
+.profile-photo-container {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+}
+
+.profile-photo-preview {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  overflow: hidden;
   margin-bottom: 10px;
 }
 
 .profile-photo-preview img {
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
